# temporalio-graphs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  PACKAGING_GUIDE.md  QUICK_START_CARD.md  README.md  fix_activities.py  fix_analyzer_tests.py  fix_decision_points.py  pyproject.toml  test_detailed_output.py  test_real_workflows.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.bmad/worktree/: README.md  config.yaml  worktree-state.yaml
.claude/agents/: story-creator.md
.claude/commands/: auto-story-continuous.md
.opencode/agent/: auto-story-continuous.md  auto-story.md  bmm-epic-context-builder.md  bmm-epic-context-validator.md  bmm-story-context-builder.md  bmm-story-context-validator.md  bmm-story-creator.md  bmm-story-implementer.md  bmm-story-reviewer.md
docs/: WORKTREE_WORKFLOW.md  api-reference.md  architecture.md  bmm-workflow-status.yaml  dotnet-python-port-gaps.md  epic-7-peer-to-peer-signals.md  epic-8-cross-workflow-signals-notes.md  epic6-cross-workflow-proposal.md  epics.md  implementation-readiness-report-2025-11-18.md  prd.md  review-2025-11-19-fix-plan.md  review-2025-11-19.md  sprint-change-proposal-2025-11-19.md  tech-spec-epic-7-peer-to-peer-signals.md  test-design-system.md  validation-report-20251118_150403.md
docs/sprint-artifacts/: CRITICAL-graph-structure-issue.md  api-decision-2025-11-19.md  continuous-run-20251119-000000.yaml  continuous-run-20251119-053140.yaml  continuous-run-20251119-134926-REPORT.md  continuous-run-20251119-134926.yaml  continuous-run-20251119-141530.yaml  continuous-run-20251120-000000.yaml  continuous-run-20251126-010142.yaml  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md  tech-spec-epic-3.md  tech-spec-epic-4.md  tech-spec-epic-5.md  tech-spec-epic-6.md  tech-spec-epic-7.md  tech-spec-epic-8.md  validation-report-2025-11-19_02-50-22.md  validation-report-3-3.md  validation-report-epic6-tech-spec-20251119.md
examples/: .gitkeep
examples/money_transfer/: actual_output.txt  expected_output.md  run.py  workflow.py
examples/multi_decision/: expected_output.md  run.py  workflow.py
examples/order_processing/: README.md  analyze_workflow.py  order_workflow.py  workflow_diagram.md
examples/parent_child_workflow/: README.md  child_workflow.py  expected_output_inline.md  expected_output_reference.md  expected_output_subgraph.md  parent_workflow.py  run.py
examples/peer_signal_workflow/: expected_output.md  order_workflow.py  run.py  shipping_workflow.py
examples/signal_flow/: expected_output.md  (+4 more)
spike/: EXECUTIVE_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  SPIKE_COMPLETE.md  STRUCTURE.md  findings.md
tests/: __init__.py  conftest.py  test_analyzer.py  test_call_graph_analyzer.py  test_child_workflow_rendering.py  test_configuration_options.py  test_context.py  test_cross_workflow_paths.py  test_detector.py  test_exceptions.py  test_formatter.py  test_generator.py  test_graph_models.py  test_helpers.py  test_package_infrastructure.py  test_path.py  test_performance.py  test_public_api.py  test_renderer.py  test_resolver.py  test_signal_graph_analyzer.py  test_validator.py
(+213 files in other folders)
